# R-type-project

./: CMakeLists.txt  README.md  conanfile.txt
Docs/: Communication_Protocol_Rtype
Headers/GameEngine/: GameEngineError.hpp
Headers/GameEngine/Common/: Event.hpp  IThreadable.hpp  Joystick.hpp  Key.hpp  Mouse.hpp  Sensor.hpp  ThreadLauncher.hpp  Vector2.hpp  Vector3.hpp
Headers/GameEngine/Game/Core/: AGameClient.hpp  AGameServer.hpp
Headers/GameEngine/Game/Core/Rtype/: RtypeClient.hpp  RtypeServer.hpp
Headers/GameEngine/Game/Model/: Enemy.hpp  Entity.hpp  EntityCollider.hpp  Missile.hpp  Player.hpp
Headers/GameEngine/Graphical/Core/: AEventManager.hpp  IMenu.hpp
Headers/GameEngine/Graphical/Core/Sfml/: SfmlEventManager.hpp  SfmlMenu.hpp
Headers/GameEngine/Graphical/Model/: ADrawable.hpp  AInputText.hpp  AMusic.hpp  AOutputText.hpp  AShape.hpp  ColliderObject.hpp  Color.hpp  GameObject.hpp
Headers/GameEngine/Graphical/Model/Sfml/: SfmlInputText.hpp  SfmlMusic.hpp  SfmlOutputText.hpp  SfmlShape.hpp
Headers/Network/Client/: TcpClient.hpp
Headers/Network/Common/: Packet.hpp  UdpClient.hpp  UdpConnection.hpp
Headers/Network/Server/: Player.hpp  Room.hpp  RoomManager.hpp  Server.hpp  TcpConnection.hpp  UdpManager.hpp
Sources/GameEngine/Common/: ThreadLauncher.cpp
Sources/GameEngine/Game/Core/: AGameClient.cpp  AGameServer.cpp
Sources/GameEngine/Game/Core/Rtype/: RtypeClient.cpp  RtypeServer.cpp
Sources/GameEngine/Graphical/Core/Sfml/: SfmlEventManager.cpp  SfmlMenu.cpp
Sources/GameEngine/Graphical/Model/: AMusic.cpp  GameObject.cpp
Sources/GameEngine/Graphical/Model/Sfml/: SfmlInputText.cpp  SfmlMusic.cpp  SfmlOutputText.cpp  SfmlShape.cpp
Sources/Network/Client/: TcpClient.cpp  main.cpp
Sources/Network/Common/: UdpClient.cpp  UdpConnection.cpp
Sources/Network/Server/: Player.cpp  Room.cpp  RoomManager.cpp  Server.cpp  TcpConnection.cpp  UdpManager.cpp  main.cpp
